--- a/GitHubSearch/Views/Shared/_Layout.cshtml
+++ b/GitHubSearch/Views/Shared/_Layout.cshtml
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Github Search</title>
+    <title>@ViewBag.Title - GitHub Search</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" style="background-color: teal;">
@@ -16,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Github Search", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "color: white" })
+                @Html.ActionLink("GitHub Search", "Index", "Home", new { area = "" }, new { @class = "navbar-brand", @style = "color: white" })
             </div>
         </div>
     </div>
