develop - updated new features list

--- a/GitHubSearch/Views/Home/Index.cshtml
+++ b/GitHubSearch/Views/Home/Index.cshtml
@@ -8,8 +8,9 @@
     <p class="lead">Type in any Github username to access their basic account info and get a list of their top repositories based on stargazers.</p>
     <p class="lead">This is an ongoing project with a few things in the works such as:-</p>
     <ul>
+        <li>Implementing a logger</li>
         <li>JavaScript Framework front-end (React or Vue)</li>
-        <li>Implement custom CSS</li>
+        <li>Adding dependency injection support via Unity</li>
         <li>Additional external Github API support</li>
         <li>Recreate in ASP.NET Core</li>
     </ul>
